# gds_tools

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
data/: log_gps_depth_sonde_2020-03-08-lake-sunapee.csv  log_gps_depth_sonde_2020-03-13-lake-sunapee.csv
launch/: global_pos_ysi_exo.launch
nodes/: gps_sonde
scripts/: plot.py  plot_buoy_shore.py  plot_error_crash.py  plot_error_speed.py  plot_gps.py  plot_gps_sonde_data.py  plot_shore_buoy.py  plot_up_down_buoy.py  plot_up_down_buoy_time.py
src/gds_tools/: plot_2d.py
